--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
   },
   "author": "Jitender",
   "license": "ISC",
@@ -13,6 +13,11 @@
     "nodemon": "^3.1.10"
   },
   "dependencies": {
-    "dotenv": "^17.2.3"
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "mongoose": "^8.19.2",
+    "prettier": "^3.6.2"
   }
 }
