--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^8.19.2",
     "mongoose-aggregate-paginate-v2": "^1.1.4",
     "multer": "^2.0.2",
-    "prettier": "^3.6.2"
+    "prettier": "^3.6.2",
+    "uuid": "^13.0.0"
   }
 }
